--- a/todoapp/src/App.css
+++ b/todoapp/src/App.css
@@ -11,11 +11,16 @@
   }
   .todo-input-row {
     flex-direction: column;
-    gap: 0.3rem;
+    gap: 0.2rem;
   }
   .todo-input-row input[type="text"] {
     font-size: 0.85rem;
     padding: 0.5rem 0.7rem;
+    border-radius: 0.5rem;
+  }
+   .todo-list input[type="text"] {
+    font-size: 0.70rem;
+    padding: 0.3rem 0.5rem;
     border-radius: 0.5rem;
   }
   .todo-input-row button {
@@ -77,8 +82,22 @@
   align-items: center;
   justify-content: center;
   padding: 2rem;
+  position: relative;
 }
-
+.blurred {
+  filter: blur(4px);
+  pointer-events: none;
+  user-select: none;
+}
+.delete-all-warning{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  z-index: 10;
+  padding: 10px;
+}
 .todo-container {
   background: #fff;
   border-radius: 1.5rem;
@@ -99,7 +118,9 @@
   margin-bottom: 0.5rem;
   letter-spacing: 1px;
 }
-
+h3{
+  margin :0px;
+}
 .todo-input-row {
   display: flex;
   gap: 0.5rem;
@@ -116,6 +137,19 @@
   transition: border 0.2s;
 }
 .todo-input-row input[type="text"]:focus {
+  border: 1.5px solid #6366f1;
+}
+.todo-list input[type="text"] {
+  flex: 1;
+  padding: 0.7rem 1rem;
+  border: 1.5px solid #a5b4fc;
+  border-radius: 0.7rem;
+  font-size: 1rem;
+  font-family: inherit;
+  outline: none;
+  transition: border 0.2s;
+}
+.todo-list input[type="text"]:focus {
   border: 1.5px solid #6366f1;
 }
 .todo-input-row button {
@@ -150,6 +184,25 @@
   cursor: pointer;
   transition: background 0.2s, color 0.2s;
 }
+
+.todo-filters{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  justify-content: center;
+}
+.todo-list-counts{
+  display: flex;
+  justify-content: space-between;
+  gap: 0.2rem;
+  margin: 0.1rem;
+}
+.todo-list-counts p{
+  margin: 0;
+  font-size: 0.9rem;
+  font-weight: bolder;
+  color: rgb(128, 57, 241);
+}
  .todo-filters button{
     background-color: rgb(128, 57, 241);
     color: white;
@@ -161,7 +214,7 @@
   cursor: pointer;
   transition: background 0.2s, color 0.2s;
   }
-  .todo-filters button:hover{
+  .todo-filters button:hover , .todo-filters .active{
     background-color: rgb(100, 32, 209);
     color: white;
   }
@@ -172,6 +225,37 @@
  .todo-actions .clearAll{
     background-color: red;
     color: white;
+  }
+  .warning-actions{
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    margin-top: 1rem;
+  }
+  .warning-actions button{
+    font-size: 1rem;
+  }
+  .yes{
+    background-color: red;
+    color: white;
+      border: none;
+  border-radius: 0.7rem;
+  padding: 0.5rem 1rem;
+  font-size: 0.95rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background 0.2s, color 0.2s;
+  }
+  .no{
+    background-color: rgb(0, 110, 201);
+    color: white;
+     border: none;
+  border-radius: 0.7rem;
+  padding: 0.5rem 1rem;
+  font-size: 0.95rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background 0.2s, color 0.2s;
   }
   .todo-actions .clearAll:hover{
     background-color: rgb(141, 4, 4);
@@ -255,6 +339,10 @@
     font-size: 0.85rem;
     padding: 0.4rem 0.7rem;
   }
+  .todo-list-counts{
+    flex-direction: column;
+    align-items: flex-start;
+  }
   .todo-filters button{
     background-color: rgb(128, 57, 241);
     color: white;
@@ -273,6 +361,11 @@
   }
   .todo-list .update-btn {
     background-color: green;
+  }
+   .todo-list input[type="text"] {
+    font-size: 0.85rem;
+    padding: 0.5rem 0.7rem;
+    border-radius: 0.5rem;
   }
   .todo-item p {
     font-size: 0.95rem;
